--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test PORT=8081 mocha --ui tdd --exit",
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "axios": "^1.3.4",
     "casual": "^1.6.2",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
